[package]
name = "markdown"
version = "0.1.0"
edition = "2021"
include = ["src/**/*"]

[dependencies]
pest = "2"
pest_derive = "2"

errors = { path = "../errors" }
utils = { path = "../utils" }
config = { path = "../config" }
console = { path = "../console" }
libs = { path = "../libs" }

tree-sitter-highlight = "0.22.6"
tree-sitter-swift = "0.5.0"
cached = { version = "0.51.3", features = ["disk_store"] }

[dev-dependencies]
templates = { path = "../templates" }
insta = "1.12.0"
